2004/02/20 01:18 (-0500) muppetman

	* Glib.pm, README, NEWS: unstable release 1.036

2004/02/19 12:50 (+0100) kaffeetisch

	* Glib.xs (gperl_alloc_temp): Return NULL and complain loudly if
	the number of bytes is not greater than 0.

2004/02/19 01:18 (-0500) muppetman

	* Glib.pm, GError.xs, TODO: documentation updates.

2004/02/18 01:35 (-0500) muppetman

	A GError.xs
	A gperl-gtypes.h
	A gperl-gtypes.c
	A t/d.t
	M MANIFEST
	M Makefile.PL
	M Glib.exports
	M Glib.xs
	M Glib.pm
	M gperl.h
	  change gperl_croak_gerror() to turn GErrors into exception objects.
	  the objects overload the stringify operator to be indistinguishable
	  from normal exceptions, resulting in no API change for old code.
	  gperl_croak_gerror()'s prefix argument is now useless, and has
	  been renamed to ignore, but not removed (to retain ABI and source
	  API compatibility).  add gperl_register_error_domain(), and use it
	  for built-ins.  doing this properly requires GEnum GTypes for the
	  error code enums, which are not provided by GLib, so we provide
	  just the relevant ones in private files which can be recreated
	  in the future as needed.

2004/02/18 01:31 (-0500) muppetman

	* ParseXSDoc.pm: quell some doc messages unless NOISYDOC is set in
	the environment.

2004/02/17 15:32 (-0500) muppetman

	* GBoxed.xs, GObject.xs, GParamSpec.xs, GSignal.xs, GType.xs,
	GUtils.xs, GValue.xs, Glib.pm, Glib.xs, MakeHelper.pm, Makefile.PL,
	Subclass.pm, gperl.h, typemap: update copyright notices; add 2004 to
	the stuff that has been modified this year.

	* GenPod.pm: add time_t to %basic_types.

2004/02/12 19:00 (-0500) muppetman

	* Glib.pm, Makefile.PL, README, NEWS: unstable release 1.035

2004/02/10 01:37 (-0500) muppetman

	Some infrastructure changes allow us to enhance the quality of
	generated POD.

	* GenPod.pm: add a way to add entries to %basic_types at runtime.

	* MakeHelper.pm: add postamble_docs_full(), and use it to implement