@@ -1,3 +1,8 @@
+2004/02/22 12:48 (-0500) rwmcfa1
+
+	* GenPod.pm: method sorting implmented with suggestions from Marc and
+	Peter.
+
 2004/02/20 01:18 (-0500) muppetman
 
 	* Glib.pm, README, NEWS: unstable release 1.036
